tests/NormalTests/paczka1/small_fuzzy/25648103.err
Error in line 2: A99 A844 3,9
Error in line 13: q6PE5VEw A640 48,7
Error in line 9: yfQ3aHA A99 85,3
Error in line 16: hB4X6D1B '99 34,9
